--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             position: absolute;
             top: 0; left: 0;
             width: 100%; height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.8);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -31,9 +31,10 @@
             padding: 30px;
             border: 3px solid #FBC02D;
             box-shadow: 0 0 25px rgba(251, 192, 45, 0.5);
-            max-width: 600px;
+            max-width: 650px;
             max-height: 80vh;
             overflow-y: auto;
+            color: #E0E0E0;
         }
         .modal-content h1 { font-size: 24px; color: #FBC02D; text-shadow: 2px 2px #000; margin-top: 0; }
         .modal-content h2 { font-size: 18px; color: #64B5F6; margin-top: 20px; border-bottom: 2px solid #64B5F6; padding-bottom: 5px; }
@@ -55,6 +56,8 @@
         }
         .close-button:hover { background-color: #FBC02D; color: #000; border-color: #FBC02D; }
         .hidden { display: none !important; }
+        #nickname-input { font-family: 'Press Start 2P', cursive; background-color: #333; border: 2px solid #999; color: white; padding: 10px; font-size: 16px; text-align: center; width: 300px; margin-top: 20px; }
+        #nickname-button {width: auto;}
 
     </style>
 </head>
@@ -70,7 +73,7 @@
 
     <div id="patch-notes-container" class="modal-overlay hidden">
         <div id="patch-notes-content" class="modal-content">
-            <!-- Patch notes serão inseridos aqui via script -->
+             <!-- Patch notes serão inseridos aqui via script -->
         </div>
     </div>
 
@@ -323,7 +326,7 @@ takeDamage(amount,fromProjectile, isExecutionPossible = false){
     if (fromProjectile) {
         playEnemyHitSound();
         if(player.stats.canHeal && player.stats.lifesteal > 0){player.hp = Math.min(player.stats.maxHp, player.hp + amount * player.stats.lifesteal)}
-        if(player.stats.canBleed && !this.isBleeding){this.isBleeding=true;this.bleedDamagePerTick=2;this.bleedTicksLeft=3;this.bleedTickTimer=this.bleedTickInterval;}
+        if(player.stats.canBleed && !this.isBleeding){this.isBleeding=true;this.bleedDamagePerTick=2;this.bleedTicksLeft=3;this.bleedTickInterval=1000;}
     }
     floatingTexts.push(new FloatingText(this.x, this.y, Math.round(amount), 'white'));
 }}
@@ -367,16 +370,35 @@ function setupMenus(){
         {x:canvas.width/2-150,y:600,w:300,h:50,text:'Wiki',action:()=>{playClickSound();menuState='wiki'}},
         {x:canvas.width/2-150,y:660,w:300,h:50,text:'Settings & Binds',action:()=>{playClickSound();menuState='settings'}}
     ];
-    // ... outros botões
+    pauseButtons=[
+        {x:canvas.width/2-100,y:300,w:200,h:50,text:'Resume',action:()=>{playClickSound();gameState='playing';if(ytPlayer)ytPlayer.playVideo();}},
+        {x:canvas.width/2-100,y:360,w:200,h:50,text:'Quit to Menu',action:()=>{playClickSound(); player = null; gameState='menu';menuState='main';fetchLeaderboard(); if (isGodModeActive) toggleGodMode();}}
+    ];
+    settingsButtons=[
+        {x:canvas.width/2-150,y:300,w:300,h:50,text:'Quality',type:'quality',action:()=>{playClickSound();if(gameData.settings.performanceMode){gameData.settings.performanceMode=false;saveGameData();generateBackground()}}},
+        {x:canvas.width/2-150,y:360,w:300,h:50,text:'Performance',type:'performance',action:()=>{playClickSound();if(!gameData.settings.performanceMode){gameData.settings.performanceMode=true;saveGameData();generateBackground()}}},
+        {x:canvas.width/2-100,y:550,w:200,h:50,text:'Back',action:()=>{playClickSound();menuState='main'}}
+    ];
+    customizeButtons = [
+        {x: 400, y: 300, w: 150, h: 50, text: '< Hat >', action: (dir) => { gameData.customization.hat = (gameData.customization.hat + dir + HATS.length) % HATS.length; if(!gameData.customization.unlockedHats.includes(gameData.customization.hat)) customizeButtons[0].action(dir); }},
+        {x: 400, y: 360, w: 150, h: 50, text: '< Outfit >', action: (dir) => { gameData.customization.outfit = (gameData.customization.outfit + dir + OUTFITS.length) % OUTFITS.length; if(!gameData.customization.unlockedOutfits.includes(gameData.customization.outfit)) customizeButtons[1].action(dir); }},
+        {x: 400, y: 420, w: 150, h: 50, text: '< Color >', action: (dir) => { const colors = COLORS.map(c => c.hex); let currentIndex = colors.indexOf(gameData.customization.color); currentIndex = (currentIndex + dir + colors.length) % colors.length; gameData.customization.color = colors[currentIndex]; if(!gameData.customization.unlockedColors.includes(gameData.customization.color)) customizeButtons[2].action(dir);}},
+        {x: canvas.width/2 - 100, y: 600, w: 200, h: 50, text: 'Save & Back', action: () => { saveGameData(); menuState = 'main'; playClickSound(); }}
+    ];
+     wikiButtons = [ {x: canvas.width/2 - 100, y: canvas.height - 100, w: 200, h: 50, text: 'Back', action: () => { menuState = 'main'; playClickSound(); }} ];
 }
 function drawMenu(){
     ctx.drawImage(skyCanvas,0,0);
     if(!gameData.settings.performanceMode){backgroundSpaceships.forEach(s=>s.draw());backgroundParticles.forEach(p=>p.draw());}
     ctx.drawImage(terrainCanvas,0,0);
     ctx.textAlign='center';
-    ctx.fillStyle='white';
+    
+    ctx.save();
+    ctx.textAlign = 'left';
+    ctx.fillStyle='rgba(255,255,255,0.5)';
     ctx.font=`12px ${FONT_PRIMARY}`;
-    ctx.fillText(`V${GAME_VERSION}`, 50, canvas.height - 20);
+    ctx.fillText(`V${GAME_VERSION}`, 20, canvas.height - 20);
+    ctx.restore();
 
     if(menuState==='main'){
         ctx.save();
@@ -392,8 +414,12 @@ function drawMenu(){
         drawPlayerSprite({x:canvas.width/2-16,y:350,width:32,height:48,invincibilityTimer:0},currentTheme);
         menuButtons.forEach(btn=>drawButton(btn));
         drawLeaderboard(canvas.width - 420, 250, 400, 400);
+    } else if(menuState === 'customize'){
+        drawCustomizeMenu();
+    } else if(menuState === 'wiki'){
+        drawWikiMenu();
     }
-    // ... outros menus
+    else if(menuState==='settings'){ctx.fillStyle=currentTheme.highlight;ctx.font=`40px ${FONT_PRIMARY}`;ctx.fillText("Settings & Binds",canvas.width/2,150);settingsButtons.forEach(btn=>drawButton(btn));ctx.fillStyle=currentTheme.text;ctx.font=`16px ${FONT_PRIMARY}`;ctx.fillText(`Volume: ${gameData.settings.volume}%`,canvas.width/2,440);const s={x:canvas.width/2-150,y:460,w:300,h:20};ctx.fillStyle='#555';ctx.fillRect(s.x,s.y,s.w,s.h);ctx.fillStyle=currentTheme.highlight;ctx.fillRect(s.x,s.y,s.w*(gameData.settings.volume/100),s.h);const binds=["A / D - Move Left / Right","Space - Jump","Mouse - Aim & Shoot","F,G,J - Active Abilities","ESC - Pause Game", "LPLP - God Mode", "LPLPLP - Summon Boss"];ctx.textAlign = 'left';binds.forEach((b,i)=>{ctx.fillText(b,100,250+i*30);});}
 }
 function drawPauseScreen(){drawPlaying();ctx.fillStyle='#00000099';ctx.fillRect(0,0,canvas.width,canvas.height);ctx.textAlign='center';ctx.fillStyle=currentTheme.highlight;ctx.font=`60px ${FONT_PRIMARY}`;ctx.fillText("Paused",canvas.width/2,150);pauseButtons.forEach(btn=>drawButton(btn));}
 function drawButton(btn){ ctx.save(); const h=mouse.x>btn.x&&mouse.x<btn.x+btn.w&&mouse.y>btn.y&&mouse.y<btn.y+btn.h; let a=false; if(btn.type==='quality'&&!gameData.settings.performanceMode)a=true; if(btn.type==='performance'&&gameData.settings.performanceMode)a=true; if(h||a){ctx.shadowColor=currentTheme.highlight;ctx.shadowBlur=15;} ctx.strokeStyle=h||a?currentTheme.highlight:currentTheme.text; ctx.lineWidth=3; ctx.strokeRect(btn.x,btn.y,btn.w,btn.h); ctx.fillStyle=h||a?currentTheme.highlight:currentTheme.text; ctx.textAlign='center'; ctx.font=`16px ${FONT_PRIMARY}`; ctx.fillText(btn.text, btn.x + btn.w/2, btn.y + btn.h/2 + 8); ctx.restore(); }
@@ -477,7 +503,7 @@ canvas.addEventListener('mousemove',e=>{const r=canvas.getBoundingClientRect();m
 canvas.addEventListener('mousedown',()=>{mouse.down=true});
 canvas.addEventListener('mouseup',()=>{mouse.down=false;if(gameState==='menu'&&menuState==='settings'){saveGameData();}});
 canvas.addEventListener('click',e=>{if(gameState==='intro')return;if(gameState==='gameOver'&&restartTimer<=0){playClickSound(); player = null; gameState='menu';menuState='main';fetchLeaderboard(); if(ytPlayer)ytPlayer.playVideo(); return;}
-    if(gameState==='menu'){let currentButtons=[];if(menuState==='main')currentButtons=menuButtons;else if(menuState==='settings')currentButtons=settingsButtons;else if(menuState==='binds')currentButtons=bindsButtons;currentButtons.forEach(b=>{if(mouse.x>b.x&&mouse.x<b.x+b.w&&mouse.y>b.y&&mouse.y<b.y+b.h)b.action()});
+    if(gameState==='menu'){let currentButtons=[];if(menuState==='main')currentButtons=menuButtons;else if(menuState==='settings')currentButtons=settingsButtons;else if (menuState === 'customize') currentButtons = customizeButtons; else if (menuState === 'wiki') currentButtons = wikiButtons; else if(menuState==='binds')currentButtons=bindsButtons;currentButtons.forEach(b=>{if(mouse.x>b.x&&mouse.x<b.x+b.w&&mouse.y>b.y&&mouse.y<b.y+b.h){if(b.text.includes('<')) { b.action(mouse.x < b.x + b.w/2 ? -1 : 1); } else { b.action(); }}});
     }else if(gameState==='paused'){pauseButtons.forEach(b=>{if(mouse.x>b.x&&mouse.x<b.x+b.w&&mouse.y>b.y&&mouse.y<b.y+b.h)b.action()});
     }else if(gameState==='levelUp' || gameState==='bossReward'){
         if (!canClickCards) return;
@@ -504,11 +530,11 @@ canvas.addEventListener('click',e=>{if(gameState==='intro')return;if(gameState==
 
 // --- DEFINIÇÃO DOS TIPOS DE CHEFE ---
 const BOSS_TYPES = [
-    { name: "Guardião de Pedra", spriteFunction: drawWardenBoss, width: 120, height: 120, baseHp: 2500, baseDamage: 40, baseSpeed: 1, attackPatterns: { normal: ['boulderToss', 'shotgunBlast'], enraged: ['shotgunBlast', 'shotgunBlast', 'boulderToss'] }, specialAbilities: [(boss) => { particles.push(new GroundSlamWarning()); setTimeout(() => { playQuakeSound(); screenShake = { active: true, magnitude: 15, duration: 300 }; if (player && player.y + player.height >= canvas.height - 160 - 5) { player.takeDamage(boss.damage * 1.5); } }, 1000); }, (boss) => { if(boss.isEnraged) { boss.isInvulnerable = true; particles.push(new StoneArmorEffect(boss)); setTimeout(() => boss.isInvulnerable = false, 3000); } }] },
-    { name: "Observador do Vazio", spriteFunction: drawGazerBoss, width: 100, height: 100, baseHp: 2000, baseDamage: 35, baseSpeed: 1.5, attackPatterns: { normal: ['rapidFire', 'rapidFire'], enraged: ['rapidFire', 'rapidFire', 'rapidFire'] }, specialAbilities: [(boss) => { const spikeX = player.x + player.width / 2; particles.push(new SpikeIndicator(spikeX, canvas.height - 32, 80)); setTimeout(() => { particles.push(new VoidSpike(spikeX, canvas.height - 32, 80)); if (player && Math.abs((player.x + player.width/2) - spikeX) < 40) { player.takeDamage(boss.damage * 1.2); } }, 500); }, (boss) => { if (player) particles.push(new GazeBeam(boss, player)); }] },
+    { name: "Guardião de Pedra", spriteFunction: drawWardenBoss, width: 120, height: 120, baseHp: 2500, baseDamage: 40, baseSpeed: 1, movementType: 'fly', attackPatterns: { normal: ['boulderToss', 'shotgunBlast'], enraged: ['shotgunBlast', 'shotgunBlast', 'boulderToss'] }, specialAbilities: [(boss) => { particles.push(new GroundSlamWarning()); setTimeout(() => { playQuakeSound(); screenShake = { active: true, magnitude: 15, duration: 300 }; if (player && player.y + player.height >= canvas.height - 160 - 5) { player.takeDamage(boss.damage * 1.5); } }, 1000); }, (boss) => { if(boss.isEnraged) { boss.isInvulnerable = true; particles.push(new StoneArmorEffect(boss)); setTimeout(() => boss.isInvulnerable = false, 3000); } }] },
+    { name: "Observador do Vazio", spriteFunction: drawGazerBoss, width: 100, height: 100, baseHp: 2000, baseDamage: 35, baseSpeed: 1.5, movementType: 'fly', attackPatterns: { normal: ['rapidFire', 'rapidFire'], enraged: ['rapidFire', 'rapidFire', 'rapidFire'] }, specialAbilities: [(boss) => { const spikeX = player.x + player.width / 2; particles.push(new SpikeIndicator(spikeX, canvas.height - 32, 80)); setTimeout(() => { particles.push(new VoidSpike(spikeX, canvas.height - 32, 80)); if (player && Math.abs((player.x + player.width/2) - spikeX) < 40) { player.takeDamage(boss.damage * 1.2); } }, 500); }, (boss) => { if (player) particles.push(new GazeBeam(boss, player)); }] },
     { name: "Enxame da Colmeia", spriteFunction: drawHiveBoss, width: 150, height: 100, baseHp: 3000, baseDamage: 10, baseSpeed: 0.5, movementType: 'static', attackPatterns: { normal: [], enraged: [] }, specialAbilities: [ (boss) => { for(let i=0; i < (boss.isEnraged ? 4 : 2); i++) { enemies.push(new Enemy('imp', boss.x + random(0, boss.width), boss.y + boss.height)); } if (boss.isEnraged) enemies.push(new Enemy('specter', boss.x + random(0, boss.width), boss.y + boss.height)); }, (boss) => { const targetPlatform = terrain.blocks.filter(b => b.y < canvas.height - 50)[Math.floor(Math.random() * (terrain.blocks.length-1))]; if(targetPlatform) enemyProjectiles.push(new CorrosiveSpit(boss.x + boss.width/2, boss.y + boss.height/2, targetPlatform)); }] },
     { name: "Sentinela de Cristal", spriteFunction: drawCrystalBoss, width: 80, height: 80, baseHp: 2800, baseDamage: 50, baseSpeed: 0, movementType: 'teleport', attackPatterns: { normal: ['multiShot'], enraged: ['multiShot', 'multiShot'] }, specialAbilities: [(boss) => { boss.isTelegraphing = true; setTimeout(() => { const laserY = player.y + player.height/2; particles.push(new LaserIndicator(laserY)); setTimeout(() => { particles.push(new LaserBeam(laserY, boss.isEnraged)); if (player && Math.abs((player.y + player.height/2) - laserY) < 10) { player.takeDamage(boss.damage * 2); } boss.isTelegraphing = false; }, 800); }, 500); }, (boss) => { for(let i = 0; i < 12; i++) { const angle = (i/12) * Math.PI * 2; enemyProjectiles.push(new CrystalShard(boss.x + boss.width/2, boss.y+boss.height/2, angle)); } }] },
-    { name: "Serafim da Ruína", spriteFunction: drawSeraphBoss, width: 100, height: 140, baseHp: 5000, baseDamage: 60, baseSpeed: 1.8, attackPatterns: { normal: ['rapidFire', 'meteor'], enraged: ['rapidFire', 'shotgunBlast', 'meteor'] }, specialAbilities: [ (boss) => { const attacks = [ (b) => BOSS_TYPES[1].specialAbilities[0](b), (b) => BOSS_TYPES[3].specialAbilities[1](b) ]; const randomAttack = attacks[Math.floor(Math.random()*attacks.length)]; randomAttack(boss); if (boss.isEnraged) { const randomAttack2 = attacks[Math.floor(Math.random()*attacks.length)]; setTimeout(() => randomAttack2(boss), 500); } }, (boss) => { for(let i=0; i<3; i++) { particles.push(new DivineChain(player.x + random(-100, 100), boss.damage)); } }] }
+    { name: "Serafim da Ruína", spriteFunction: drawSeraphBoss, width: 100, height: 140, baseHp: 5000, baseDamage: 60, baseSpeed: 1.8, movementType: 'fly', attackPatterns: { normal: ['rapidFire', 'meteor'], enraged: ['rapidFire', 'shotgunBlast', 'meteor'] }, specialAbilities: [ (boss) => { const attacks = [ (b) => BOSS_TYPES[1].specialAbilities[0](b), (b) => BOSS_TYPES[3].specialAbilities[1](b) ]; const randomAttack = attacks[Math.floor(Math.random()*attacks.length)]; randomAttack(boss); if (boss.isEnraged) { const randomAttack2 = attacks[Math.floor(Math.random()*attacks.length)]; setTimeout(() => randomAttack2(boss), 500); } }, (boss) => { for(let i=0; i<3; i++) { particles.push(new DivineChain(player.x + random(-100, 100), boss.damage)); } }] }
 ];
 
 // --- PARTÍCULAS DE HABILIDADES DE CHEFE ---
